@@ -2,7 +2,7 @@ Package: taxize
 Description: Taxonomic search and phylogeny retrieval.
 Title: Taxonomic search and phylogeny retrieval.
 Version: 0.0.2
-Date: 2012-12-06
+Date: 2012-12-07
 License: CC0
 Authors@R: c(person("Scott", "Chamberlain", role = c("aut", "cre"),
     email = "myrmecocystus@gmail.com"),
@@ -43,7 +43,6 @@ Collate:
     'eol_ping.R'
     'eol_search.R'
     'gnr_resolve.R'
-    'iplant_tnrsmatch.R'
     'phylomatic_tree.R'
     'get_seqs.R'
     'taxize-package.R'
