@@ -13,7 +13,6 @@ export(gni_details)
 export(gni_search)
 export(gnr_datasources)
 export(gnr_resolve)
-export(iplant_tnrsmatch)
 export(itis_acceptname)
 export(itis_downstream)
 export(itis_name)
